name:                qase
version:             0.1.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          shumovichy@gmail.com
-- copyright:           
category:            Prelude
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Async
                       WaitGroup
                       RWLock
                       Aeson
  other-modules:       Prelude
  -- other-extensions:    
  build-depends:       base
                       , text
                       , vector
                       , unordered-containers
                       , aeson
                       , async
                       , stm
                       , io-region
  hs-source-dirs:      lib, compat
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             spec.hs
  other-modules:       Spec.Async
                       Spec.WaitGroup
                       Spec.Aeson
  build-depends:       base
                       , text
                       , vector
                       , aeson
                       , unordered-containers
                       , async
                       , hspec
                       , qase
  default-language:    Haskell2010
